logs/aima.log
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/aima'...
Compiling './lib/python3.5/site-packages/aima/agents.py'...
***   File "./lib/python3.5/site-packages/aima/agents.py", line 57
    print "I don't know how to show_state."
                                          ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/aima/csp.py'...
***   File "./lib/python3.5/site-packages/aima/csp.py", line 75
    print 'CSP:', self, 'with assignment:', assignment
               ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/aima/doctests.py'...
***   File "./lib/python3.5/site-packages/aima/doctests.py", line 25
    print '%d failed out of %d' % summary
                              ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/aima/games.py'...
***   File "./lib/python3.5/site-packages/aima/games.py", line 172
    print state
              ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/aima/images'...
Compiling './lib/python3.5/site-packages/aima/learning.py'...
***   File "./lib/python3.5/site-packages/aima/learning.py", line 267
    print 'Test', name
               ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/aima/logic.py'...
***   File "./lib/python3.5/site-packages/aima/logic.py", line 401
    raise ValueError, "illegal operator in logic expression" + str(exp)
                    ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/aima/nlp.py'...
***   File "./lib/python3.5/site-packages/aima/nlp.py", line 154
    print '%10s: added %s' % (caller(2), edge)
                         ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/aima/probability.py'...
***   File "./lib/python3.5/site-packages/aima/probability.py", line 416
    return every(lambda (k, v): evidence.get(k, v) == v,
                        ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/aima/search.py'...
***   File "./lib/python3.5/site-packages/aima/search.py", line 618
    if board[i] == 'Q': print 'Qu',
                                 ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/aima/utils.py'...
***   File "./lib/python3.5/site-packages/aima/utils.py", line 568
    def distance((ax, ay), (bx, by)):
                 ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/aima-2015.4.5.egg-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
